syntax = "proto3"; // ✅ Add missing semicolon

option go_package = "github.com/valdimir-makarov/Go-backend-Engineering/gRPC-GO/common/orders"; // ✅ Remove extra space

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
}

message CreateOrderRequest {
    int32 customerID = 1;
    int32 productID = 2;
    int32 quantity = 3;
}

message CreateOrderResponse {
    string status = 1;
}

message GetOrderRequest {
    int32 customerID = 1;
}

message GetOrderResponse {
    repeated Order orders = 1;
}

// ✅ Define the missing Order message
message Order {
    int32 orderID = 1;
    int32 customerID = 2;
    int32 productID = 3;
    int32 quantity = 4;
    string status = 5;
}
